# Pacorpack-py

./: CHANGELOG.md  README.md  pacman_log_orphans.hook  pacman_log_orphans.py  pyproject.toml
